--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav>
-      <h1 class="logo">VOVO</h1>
+      <h1 class="logo">V O V O</h1>
       <div>
         <ul class="navbar_links">
           <li><a href="#">Home</a></li>
@@ -19,10 +19,29 @@
       <a href=""><button>Login</button></a>
     </nav>
 
-    <header></header>
+    <header class=" ">
+      
+       <div class="carousel"></div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://www.startech.com.bd/image/cache/catalog/home/Logitech-Portable-Bluetooth-Speaker-982x500.png" alt="Slide 1">
+      </div>
+      <div class="carousel-item">
+        <img src="https://www.startech.com.bd/image/cache/catalog/home/queue-banner-home-service-982x500.png" alt="Slide 2">
+      </div>
+      <div class="carousel-item">
+        <img src="https://www.startech.com.bd/image/cache/catalog/home/banner/express-delivery-girl-receiving-parcel-home-banner-982x500.webp" alt="Slide 3">
+      </div>
+    </div>
+    <button class="prev" onclick="prevSlide()">&#10094;</button>
+    <button class="next" onclick="nextSlide()">&#10095;</button>
+  </div>
+
+    </header>
 
     <main></main>
 
     <footer></footer>
+     <script src="scripts/styles.js"></script>
   </body>
 </html>
