--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href=""><button>Login</button></a>
     </nav>
 
-    <header class=" ">
+    <header class="header-main">
       
        <div class="carousel"></div>
     <div class="carousel-inner">
@@ -39,7 +39,14 @@
 
     </header>
 
-    <main></main>
+    <main>
+     <!-- Featured Products -->
+     <section>
+       <h1 class="section-titles">Featured </h1>
+     </section>
+
+
+    </main>
 
     <footer></footer>
      <script src="scripts/styles.js"></script>
