Footer added with CSS

--- a/index.html
+++ b/index.html
@@ -48,7 +48,24 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="icon-div">
+        
+    <h1>V O V O</h1>
+    </div>
+    <p>Your trusted tech store for high-quality PC accessories, including CPUs, GPUs, monitors, and more. Shop with us for the latest in computing hardware and upgrade your setup today!</p>
+    <div class="social-media">
+      <a class="odd" href=""><i class="fa-brands fa-x-twitter"></i></a>
+      <a class="even" href=""><i class="fa-brands fa-facebook-f"></i></a>
+      <a class="odd" href=""><i class="fa-brands fa-github"></i></a>
+      <a class="even" href=""><i class="fa-brands fa-instagram"></i></a>
+      
+    </div>
+    <div class="copyright">
+      <p>2024, All Rights Reserved.</p>
+    </div>
+    </footer>
      <script src="scripts/styles.js"></script>
+     <script src="https://kit.fontawesome.com/ef66a13064.js" crossorigin="anonymous"></script>
   </body>
 </html>
