added Trusted Partners section with css keyframes and images

--- a/index.html
+++ b/index.html
@@ -41,10 +41,59 @@
 
     <main>
      <!-- Featured Products -->
-     <section>
+     <section class="section-div">
        <h1 class="section-titles">Featured </h1>
      </section>
-
+      
+<!-- Our Trusted Partners -->
+      <section class="section-div">
+         <h1 class="section-titles">Trusted Partners </h1>
+        <div class="slider"></div>
+	<div class="slide-track">
+		<div class="slide">
+			<img src="/images/logo/acer.png"  width="250" alt="" />
+		</div>
+		<div class="slide">
+			<img src="/images/logo/amd.png"  width="250" alt="" />
+		</div>
+		<div class="slide">
+			<img src="/images/logo/asus.png"  width="250" alt="" />
+		</div>
+		<div class="slide">
+			<img src="/images/logo/gigabyte.png"  width="250" alt="" />
+		</div>
+		<div class="slide">
+			<img src="/images/logo/intel.png"  width="250" alt="" />
+		</div>
+		<div class="slide">
+			<img src="/images/logo/lg.png" width="250" alt="" />
+		</div>
+		<div class="slide">
+			<img src="images/logo/samsung.png" width="250" alt="" />
+		</div>
+		<div class="slide">
+			<img src="/images/logo/acer.png"  width="250" alt="" />
+		</div>
+		<div class="slide">
+			<img src="/images/logo/amd.png"  width="250" alt="" />
+		</div>
+		<div class="slide">
+			<img src="/images/logo/asus.png"  width="250" alt="" />
+      </div>
+	
+		<div class="slide">
+			<img src="/images/logo/intel.png" width="250" alt="" />
+		</div>
+		<div class="slide">
+			<img src="/images/logo/lg.png"  width="250" alt="" />
+		</div>
+		<div class="slide">
+			<img src="images/logo/samsung.png"  width="250" alt="" />
+		</div>
+    	
+	</div>
+</div>
+      </section>
 
     </main>
 
