added vovo name and logo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/main.css" />
-    <title>Document</title>
+    <link rel="icon" href="images/logo/vovo.png"/>
+    <title>VOVO Tech</title>
   </head>
   <body>
     <nav>
@@ -43,6 +44,12 @@
      <!-- Featured Products -->
      <section class="section-div">
        <h1 class="section-titles">Featured </h1>
+
+       <div>
+         
+
+
+       </div>
      </section>
       
 <!-- Our Trusted Partners -->
