--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </div>
   </div>
 
-   <!-- DUMMY -->
+   <!-- DUMMY  Start-->
   <div class="card">
   <img src="https://www.startech.com.bd/image/cache/catalog/monitor/viewsonic/vx2276-sh/vx2276-sh-01-228x228.jpg" alt="Card image" class="card-img">
   <div class="card-body">
@@ -114,7 +114,7 @@
    
   </div>
   </div>
-  
+  <!-- DUMMY  END-->
   
 
        
