added cart button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
           <li><a href="#">About</a></li>
         </ul>
       </div>
-      <a id="" href=""><button>Login</button></a>
+      <div class="nav-end">
+        <div class="cart-button"><i  class="fa-solid nav-cart fa-cart-shopping"></i></div>
+        <div>
+<!-- <a href=""><button id="login-btn" onclick="">Login</button></a></div> -->
+        </div>
+      
+      
     </nav>
 
     <header class="header-main">
