count logic build up with  html css js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
         </ul>
       </div>
       <div class="nav-end">
-       <a onclick="openModal()"><div class="cart-button"><i  class="fa-solid nav-cart fa-cart-shopping"></i></div></a> 
+       <a onclick="openModal()">
+
+        <div class="cart-button">
+        <i class="fa-solid nav-cart fa-cart-shopping"></i>
+        <span id="cart-count-span" class="cart-count hidden"><p id="cart-count-text">0</p></span>
+    </div>
+
+       </a> 
         <div>
 <!-- <a href=""><button id="login-btn" onclick="">Login</button></a></div> -->
         </div>
