added posters and some data

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div>
         <ul class="navbar_links">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="">Add</a></li>
+          <li><a href="#product">Products</a></li>
           <li><a href="#">About</a></li>
         </ul>
       </div>
@@ -39,13 +39,13 @@
        <div class="carousel"></div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://www.startech.com.bd/image/cache/catalog/home/Logitech-Portable-Bluetooth-Speaker-982x500.png" alt="Slide 1">
+        <img src="./images/poster/rtx.jpg" alt="Slide 1">
       </div>
       <div class="carousel-item">
-        <img src="https://www.startech.com.bd/image/cache/catalog/home/queue-banner-home-service-982x500.png" alt="Slide 2">
+        <img src="./images/poster/rog.jpg" alt="Slide 2">
       </div>
       <div class="carousel-item">
-        <img src="https://www.startech.com.bd/image/cache/catalog/home/banner/express-delivery-girl-receiving-parcel-home-banner-982x500.webp" alt="Slide 3">
+        <img src="./images/poster/del.jpg" alt="Slide 3">
       </div>
     </div>
     <button class="prev" onclick="prevSlide()">&#10094;</button>
@@ -56,7 +56,7 @@
 
     <main>
      <!-- Featured Products -->
-     <section class="section-div">
+     <section id="product" class="section-div">
        <h1 class="section-titles">Featured </h1>
        <p class="section-p">Check & Get Your Desired Product!</p>
 
