--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" onclick="exitModal()" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" onclick="exitCartModal()" data-bs-dismiss="modal">Close</button>
         <button onclick="openCheckoutModal()" id="checkout-btn" type="button" class="btn btn-primary hidden">Checkout</button>
       </div>
     </div>
