some simple responsive added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="icon" href="./images/logo/vovo.png"/>
     <link rel="stylesheet" href="./styles/cart.css">
+    <link rel="stylesheet" href="./styles/responsive.css">
     <title>VOVO Tech</title>
   </head>
   <body>
