added a toast using html js css and gif

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="./images/logo/vovo.png"/>
     <link rel="stylesheet" href="./styles/cart.css">
     <link rel="stylesheet" href="./styles/responsive.css">
+    <link rel="stylesheet" href="./styles/toast.css">
     <title>VOVO Tech</title>
   </head>
   <body>
@@ -232,8 +233,14 @@
 </div>
       </section>
 
-    </main>
-
+     </main>
+  <div id="toast">
+    <div id="img">
+        <img src="./images/logo/confirm.gif" alt="Notification Animation" id="toast-image">
+        
+    </div>
+    <div id="desc">Product Has been added.</div>
+</div>
     <footer>
       <div class="icon-div">
         
