--- a/index.html
+++ b/index.html
@@ -197,44 +197,44 @@
         <div class="slider"></div>
 	<div class="slide-track">
 		<div class="slide">
-			<img src="/images/logo/acer.png"  width="250" alt="" />
+			<img src="./images/logo/acer.png"  width="250" alt="" />
 		</div>
 		<div class="slide">
-			<img src="/images/logo/amd.png"  width="250" alt="" />
+			<img src="./images/logo/amd.png"  width="250" alt="" />
 		</div>
 		<div class="slide">
-			<img src="/images/logo/asus.png"  width="250" alt="" />
+			<img src="./images/logo/asus.png"  width="250" alt="" />
 		</div>
 		<div class="slide">
-			<img src="/images/logo/gigabyte.png"  width="250" alt="" />
+			<img src="./images/logo/gigabyte.png"  width="250" alt="" />
 		</div>
 		<div class="slide">
-			<img src="/images/logo/intel.png"  width="250" alt="" />
+			<img src="./images/logo/intel.png"  width="250" alt="" />
 		</div>
 		<div class="slide">
 			<img src="/images/logo/lg.png" width="250" alt="" />
 		</div>
 		<div class="slide">
-			<img src="images/logo/samsung.png" width="250" alt="" />
+			<img src="./images/logo/samsung.png" width="250" alt="" />
 		</div>
 		<div class="slide">
-			<img src="/images/logo/acer.png"  width="250" alt="" />
+			<img src="./images/logo/acer.png"  width="250" alt="" />
 		</div>
 		<div class="slide">
-			<img src="/images/logo/amd.png"  width="250" alt="" />
+			<img src="./images/logo/amd.png"  width="250" alt="" />
 		</div>
 		<div class="slide">
-			<img src="/images/logo/asus.png"  width="250" alt="" />
+			<img src="./images/logo/asus.png"  width="250" alt="" />
       </div>
 	
 		<div class="slide">
-			<img src="/images/logo/intel.png" width="250" alt="" />
+			<img src="./images/logo/intel.png" width="250" alt="" />
 		</div>
 		<div class="slide">
-			<img src="/images/logo/lg.png"  width="250" alt="" />
+			<img src="./images/logo/lg.png"  width="250" alt="" />
 		</div>
 		<div class="slide">
-			<img src="images/logo/samsung.png"  width="250" alt="" />
+			<img src="./images/logo/samsung.png"  width="250" alt="" />
 		</div>
     	
 	</div>
