--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 			<img src="./images/logo/intel.png"  width="250" alt="" />
 		</div>
 		<div class="slide">
-			<img src="/images/logo/lg.png" width="250" alt="" />
+			<img src="./images/logo/lg.png" width="250" alt="" />
 		</div>
 		<div class="slide">
 			<img src="./images/logo/samsung.png" width="250" alt="" />
